# figgy

./: .gitattributes  .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
crates/model/: Cargo.toml
crates/model/src/: color.rs  config.rs  data.rs  data_config.rs  default.rs  drag.rs  format.rs  legend.rs  lib.rs  line.rs  preset.rs  resize.rs  select.rs  text.rs  tick.rs
crates/model/src/layout/: fit.rs  mod.rs  nudge.rs  rect.rs
crates/model/tests/: schema_sync.rs
crates/renderer/: Cargo.toml  WASM.md
crates/renderer/examples/: constellation_demo.rs  constellation_lab.rs  egui_embed.rs  iced_embed.rs  precise_scatter_probe.rs  raster_bench.rs  sketch_demo.rs  ssot_lab.rs  winit_simple.rs
crates/renderer/src/: axis_render.rs  chart.rs  data.rs  demo.rs  error.rs  lib.rs  pick.rs  raster.rs  renderer.rs  sketch.rs  text_render.rs  time_axis.rs
crates/renderer/src/data_render/: SHADER_COMMON.md  column_pool.rs  errorbar_columnar.wgsl  fullscreen_textured.wgsl  line_arc.rs  line_arc.wgsl  line_columnar.wgsl  mod.rs  scatter_columnar.wgsl
crates/renderer/tests/: shader_consistency.rs  sketch_render.rs
crates/web/: Cargo.toml  SCHEMA.md  figgy-chart.js  index.html  timestamp-demo.html
crates/web/src/: lib.rs
examples/: egui_embed.rs  iced_embed.rs  winit_simple.rs
fonts/: LICENSE-LiberationSans.txt
src/: axis_render.rs  chart.rs  color.rs  config.rs  data.rs  data_config.rs  default.rs  demo.rs  error.rs  format.rs  lib.rs  line.rs  renderer.rs  text.rs  text_render.rs  tick.rs
src/data_render/: SHADER_COMMON.md  column_pool.rs  errorbar_columnar.wgsl  line_columnar.wgsl  mod.rs  scatter_columnar.wgsl
src/layout/: fit.rs  mod.rs  nudge.rs  rect.rs
tests/: shader_consistency.rs
