[package]
name = "figgy"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.19", features = ["derive"] }
png = "0.17"
pollster = "0.4.0"
skia-safe = "0.93.1"
wgpu = "27"

eframe = { version = "0.33", optional = true, default-features = false, features = ["wgpu"] }
egui = { version = "0.33", optional = true }
egui-wgpu = { version = "0.33", optional = true }
iced = { version = "0.14", optional = true, features = ["wgpu"] }
iced_wgpu = { version = "0.14", optional = true }

[dev-dependencies]
winit = "0.30.13"

[features]
egui_demo = ["dep:eframe", "dep:egui", "dep:egui-wgpu"]
iced_demo = ["dep:iced", "dep:iced_wgpu"]

[[example]]
name = "winit_simple"
path = "examples/winit_simple.rs"

[[example]]
name = "egui_embed"
path = "examples/egui_embed.rs"
required-features = ["egui_demo"]

[[example]]
name = "iced_embed"
path = "examples/iced_embed.rs"
required-features = ["iced_demo"]
